# CS178-goop-squad-CIFAR10

./: INSTRUCTIONS.md  README.md  init_data.py  main.py  pyproject.toml
analysis/: README.md  data_analysis.ipynb
models/: README.md
models/CNN/: README.md  model.ipynb  test.ipynb
models/feedforward/: README.md  model.ipynb
models/kNN/: README.md  model.ipynb  test.ipynb
models/logistic/: README.md  model.ipynb
outputs/: README.md
outputs/graphs/: README.md
outputs/graphs/test/: shahpk1_test_benchmark_table.csv
outputs/model_weights/: README.md  bonktruong_arch_1-layer-256.pt  logregpca_best.pkl  logregraw_best.pkl
results/: README.md  anishv2_knn_final_report.md  logregpca_summary.json  logregraw_summary.json  shahpk1_cnn_final_results.md  shahpk1_cnn_inference_benchmark.csv  shahpk1_cnn_run_metadata.json  shahpk1_data_analysis_final_results.md
results/feedforward-metadata/: bonktruong_activation_relu.json  bonktruong_activation_sigmoid.json  bonktruong_activation_tanh.json  bonktruong_arch_1-layer-256.json  bonktruong_arch_1-layer-512.json  bonktruong_arch_2-layer-512-256.json  bonktruong_arch_3-layer-512-256-128.json  bonktruong_ffnn_final_report.md  bonktruong_ffnn_metadata.json  bonktruong_lr_0.0001.json  bonktruong_lr_0.001.json  bonktruong_lr_0.01.json  bonktruong_reg_all_reg.json  bonktruong_reg_batchnorm.json  bonktruong_reg_dropout+bn.json  bonktruong_reg_dropout_0.2.json  bonktruong_reg_no_reg.json
